feat: gRPC Service Implementation to Get Movies